Ponca changelog



--------------------------------------------------------------------------------
Current head (v.1.3 RC)


--------------------------------------------------------------------------------
v.1.2
This release introduces several bug fixes and minor improvements.

- API
    - [spatialPartitioning] Optimize memory use in knngraph queries (#104)
    - [spatialPartitioning] Clean KdTree API (#122)
    - [spatialPartitioning] Simplify node customization (#128)
    - [fitting] Mark `Base` type as protected instead of private in CRTP classes (#119)
    - [fitting] Improve KdTreeNodes API by hiding internal memory layout, improve methods naming (#120)
    - [SpatialPartitioning] Change part of the kdtree API (#123)

- Examples
    - Fix example cuda/ponca_ssgls (#109)

- Bug-fixes and code improvements
    - [fitting] Use variadic template for basket extensions (#85)
    - [fitting] Fix current status issue (#108)
    - [fitting] Fix sphere fit eigen solver (#112)
    - [fitting] Fix a bug in AlgebraicSphere::primtiveGradient (#127)
    - [spatialPartitioning] Optimize memory use in knngraph queries (#104)
    - [spatialPartitioning] Fix potential compilation issues in KnnGraph (#111)
    - [spatialPartitioning] Fix debug macros in KnnGraphRangeQuery (#121)
    - [spatialPartitioning] Improve kdtree to_string to output data in YAML format (#125)

-Docs
    - [fitting] Clarify documentation on FIT_RESULT (#108)

--------------------------------------------------------------------------------
v.1.1
This release improves the Spatial Partitioning Package with new features and
improved doc, as well as several bug fixes and API improvements.

- API
    - [spatialPartitioning] Add kd-tree traits type (#80)
    - [spatialPartitioning] Add knn-graphs (#101)
    - [fitting] Add Primitive::getNumNeighbors (#86)
    - [fitting] Add Primitive::getWeightFunc (#99)